--- a/Krevatotech/Codes/style.css
+++ b/Krevatotech/Codes/style.css
@@ -333,35 +333,6 @@ nav img:hover{
     transform: scale(1.1);
   }
 
-@media(max-width:1250px){
-  
-  .ShowRoum_Container{
-    padding-top: 5vh;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom: 5vh;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
-  }
-
-}
-
-@media(max-width:300px){
-  
-  .ShowRoum_Container{
-    padding-top: 5vh;
-    padding-left: 1%;
-    padding-right: 1%;
-    padding-bottom: 5vh;
-    text-align: left;
-    justify-content: left;
-    align-items: left;
-    overflow-x: hidden;
-  }
-}
-
 /*Beds Gallery pages*/
 .Button_Container{
   padding-top:14px ;
@@ -382,6 +353,37 @@ nav img:hover{
   color:blue;
   opacity: 0.7;
   justify-content: center;
+}
+
+@media(max-width:1250px){
+  
+  .ShowRoum_Container{
+    padding-top: 5vh;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 5vh;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
+  }
+
+}
+
+@media(max-width:350px){
+  
+  .ShowRoum_Container{
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    text-align: left;
+    justify-content: left;
+    align-items: left;
+    overflow-x: hidden;
+  }
+
+  .ShowRoum_Gallery{
+    width:100%;
+  }
 }
 
 /*Λίστα με Διαστάσεις*/
@@ -776,7 +778,7 @@ nav img:hover{
   }
 
   #Zoom_Image img {
-    width: 70%;
+    width: 100%;
     height: auto; 
     text-align: left;
     border: 4px solid black;
