--- a/Krevatotech/Codes/style.css
+++ b/Krevatotech/Codes/style.css
@@ -6,7 +6,6 @@
 
 body{
   background-color: burlywood;
-  border: 4px solid red;
   overflow-x:hidden;
 }
 
@@ -213,6 +212,15 @@ nav img:hover{
   left: 20px; /* Adjust based on your preference */
   border-left:6px solid black ;
   margin-left: 10%;
+}
+
+@media(max-width:800px){
+.Section_Itself img{
+  height: 900px;
+  width: 800px;
+  max-width: 100%;
+  flex: 1;
+}
 }
 /*
 .slider-wrapper{
